# coinflipper

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  .release_time  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  coinflip.cpp  coinfliper.cpp  coinflipper  coinflipper.cc  coinflipper.cpp  coinflipper.h  coinflipper.hpp  coinflipper.proto  coinflipper_flipper.cc  coinflipper_server.cc  coinflipper_status.cc  coinserver.cpp  cointense.cpp  dummy_rng.h
.github/workflows/: docker.yml
kubernetes/: coinflipper.yaml
kubernetes/coinflipper-viewer/: README.md  manifest.yaml
kubernetes/coinflipper-viewer/assets/: index.html  liveness.sh  refresh.sh
src/: coinflipper.cc  coinflipper.h  coinflipper.proto  coinflipper_flipper.cc  coinflipper_server.cc  coinflipper_status.cc  dummy_rng.h  flipper.rs  main.rs  persistence.rs  server.rs  stats.rs  status.rs
viewer/: Makefile  dune-project  viewer.opam
viewer/lib/: dune  format_metrics.ml  format_status.ml  grpc_client.ml
viewer/proto/: coinflipper.proto  dune
viewer/static/: index.html
